[package]
name = "end_to_end"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
ethereum-types = { workspace = true }
plonky2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
anyhow = "1.0.82"
log4rs = "1.3.0"
ciborium-io = "0.2.2"
ethers = { version = "2.0.14", features = ["optimism"] }
itertools = "0.12.1"
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"

# Local dependencies
mpt_trie = { path = "../mpt_trie" }
evm_arithmetization = { path = "../evm_arithmetization" }
trace_decoder = { path = "../trace_decoder" }
proof_gen = { path = "../proof_gen" }
serde = { version = "1.0.198", features = ["derive"] }
