[package]
name = "trace_decoder"
description = "Ethereum node witness -> Prover input"
authors = ["Polygon Zero"]
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bitflags = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
either = { workspace = true }
enum-as-inner = { workspace = true }
ethereum-types = { workspace = true }
evm_arithmetization = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
itertools.workspace = true
keccak-hash = { workspace = true }
log = { workspace = true }
mpt_trie = { workspace = true }
nunny = { workspace = true, features = ["serde"] }
plonky2 = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
smt_trie = { workspace = true }
thiserror = { workspace = true }
u4 = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
plonky2 = { workspace = true }
pretty_env_logger = "0.5.0"
serde_json = { workspace = true }

[[bench]]
name = "block_processing"
harness = false
